--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<body>
 		<!--<script src="/js/8-10.js"></script>   variables -->
 		<!-- <script src="/js/11.js"></script> -->
-		<script src="/js/12-14.js"></script>
+		<!-- <script src="/js/12-14.js"></script>  -->
+		<script src="/js/12-18.js"></script> 
 
 	</body>
 </html>
