--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
 		<title>Document</title>
 	</head>
 	<body>
+		<h1>Hello world</h1>
 		<!--<script src="/js/8-10.js"></script>   variables -->
 		<!-- <script src="/js/11.js"></script> -->
 		<!-- <script src="/js/12-14.js"></script>  -->
-		<script src="/js/12-18.js"></script> 
+		<!-- <script src="/js/18-hometask.js"></script> --> 
+		<!-- <script src="/js/19.js"></script> -->
+		 <!--<script src="/js/20.js"></script> цикл -->
+		<!-- <script src="/js/23-hometask.js"></script> -->
+		
+		<!-- <script src="/js/24.js"></script> -->
+		<!-- <script src="/js/27.js"></script> -->
+		<script src="/js/28-hometask.js"></script>
+
+		<!-- <script src="/js/for-test.js"></script> -->
 
 	</body>
 </html>
